Fix for chocolate text positioning on mobile; Fix for chocolate result example hiding on step 2

--- a/src/css/build.scss
+++ b/src/css/build.scss
@@ -1029,6 +1029,12 @@
       padding: 12px 11px;
     }
   }
+
+  .result-chocolate--text-wrap {
+    top: 230px;
+    left: 3px;
+    transform: rotate(7deg) scaleX(0.9) skew(1deg, 1deg) scale(.7);
+  }
 }
 
 @media screen and (max-width: 400px) {
